org_unpackaged/unpackaged/objects/DD_254__c.object
<CustomObject>
    <fields>
        <fullName>All_Work_Orders_Expired__c</fullName>
        <formula>AND(Total_Number_of_WOs__c &gt; 0, Total_Number_of_Expired_WOs__c  == Total_Number_of_WOs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Work Orders Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNWDI_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNWDI Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMSEC_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COMSEC Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Secret</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Top Secret</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clearance_Activation_Date__c</fullName>
        <formula>Security_Clearance__r.Activation_Date__c</formula>
        <label>Clearance Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>DD-254 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GCA_Address__c</fullName>
        <label>GCA Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCA_Name__c</fullName>
        <label>GCA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCA_POC_Email__c</fullName>
        <label>GCA POC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GCA_POC_Name__c</fullName>
        <label>GCA POC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCA_POC_Phone__c</fullName>
        <label>GCA POC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>JPAS_End_Date__c</fullName>
        <label>Investigation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JPAS_Start_Date__c</fullName>
        <label>Investigation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NATO_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NATO Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NATO_Indoc_Date__c</fullName>
        <label>NATO Indoc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prime_Contract_Number__c</fullName>
        <label>Prime Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Contractor_Cage_Code__c</fullName>
        <label>Prime Contractor Cage Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Contractor__c</fullName>
        <label>Prime Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCI_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCI Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safeguarding__c</fullName>
        <label>Safeguarding</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Clearance__c</fullName>
        <label>Security Clearance</label>
        <referenceTo>Security_Clearance__c</referenceTo>
        <relationshipLabel>DD-254&apos;s</relationshipLabel>
        <relationshipName>DD_254_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subcontract_Number__c</fullName>
        <label>Subcontract Number or PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Expired_WOs__c</fullName>
        <label>Total Number of Expired WOs</label>
        <summaryFilterItems>
            <field>DD_254_WO_Joint__c.Work_Order_Expired_WF__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>DD_254_WO_Joint__c.DD_254__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_WOs__c</fullName>
        <label>Total Number of WOs</label>
        <summaryForeignKey>DD_254_WO_Joint__c.DD_254__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Summary__c</fullName>
        <label>Work Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DD-254</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Security_Clearance__c</columns>
        <columns>Classification__c</columns>
        <columns>JPAS_Start_Date__c</columns>
        <columns>JPAS_End_Date__c</columns>
        <columns>CNWDI_Access__c</columns>
        <columns>COMSEC_Access__c</columns>
        <columns>NATO_Access__c</columns>
        <columns>SCI_Access__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DD-{00000}</displayFormat>
        <label>DD-254 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DD-254&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>